src/test/ui/consts/const-eval/pub_const_err.stderr
error: attempt to subtract with overflow
  --> $DIR/pub_const_err.rs:13:22
   |
LL | pub type Foo = [i32; 0 - 1];
   |                      ^^^^^
   |
   = note: #[deny(const_err)] on by default

error[E0080]: could not evaluate constant expression
  --> $DIR/pub_const_err.rs:13:16
   |
LL | pub type Foo = [i32; 0 - 1];
   |                ^^^^^^-----^
   |                      |
   |                      attempt to subtract with overflow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
